# Outplayed_Haskell

./: CHANGELOG.md  OutPlayed.cabal
app/: Data.hs  Instructions.hs  Main.hs  Setup.hs
app/MyFunctions/: DisplayGuesses.hs  GameOver.hs  GetAnswer.hs  GetCurrentPlayer.hs  GetInputsAndTotal.hs  GetNumber.hs  InitializeGame.hs  MyPrintf.hs  Numbers.hs  P1ScorePoint.hs  P2ScorePoint.hs  PlayGame.hs  PlayersWrong.hs  ProcessInputs.hs  Rendering.hs  Scoreboard.hs  SwitchTurns.hs
app/MyFunctions/dist-newstyle/cache/: compiler
app/assets/Scoreboard/: Outplayed.txt  p10p20.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
