cabal-version:      2.4
name:               OutPlayed
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Tyler
maintainer:         62820237+tthikida@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable OutPlayed
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Data
                    , Instructions
                    , Setup
                    , MyFunctions.DisplayGuesses
                    , MyFunctions.GameOver
                    , MyFunctions.GetAnswer
                    , MyFunctions.GetCurrentPlayer
                    , MyFunctions.GetInputsAndTotal
                    , MyFunctions.GetNumber
                    , MyFunctions.InitializeGame
                    , MyFunctions.MyPrintf
                    , MyFunctions.Numbers
                    , MyFunctions.P1ScorePoint
                    , MyFunctions.P2ScorePoint
                    , MyFunctions.PlayersWrong
                    , MyFunctions.PlayGame
                    , MyFunctions.ProcessInputs
                    , MyFunctions.Rendering
                    , MyFunctions.Scoreboard
                    , MyFunctions.SwitchTurns
                    
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , ansi-terminal
                    , mtl
                    , terminal-size
    hs-source-dirs:   app
    default-language: Haskell2010
